[package]
name = "tokio-tree-context"
version = "0.1.6"
edition = "2021"
license = "Apache-2.0"
description = "Tokio Context for launching and cancelling tasks"
repository = "https://github.com/wushilin/tokio-tree-context.git"

[dependencies]
tokio = {version="1", features = ["macros", "sync", "time", "rt", "rt-multi-thread"]}
